--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "online-text-editor",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,8 +16,10 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "mjml": "^4.15.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "quill": "^2.0.3",
     "xlsx": "^0.18.5"
   }
 }
