--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mjml": "^4.15.3",
+    "mongoose": "^8.13.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "quill": "^2.0.3",
